--- a/movie-analysis.ipynb
+++ b/movie-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +27,10 @@
     "        stars[j] = stars[j].replace(', \"', '')\n",
     "        if ':\\'' in stars[j]:\n",
     "            stars[j] = stars[j].split(':\\'')[1]\n",
-    "        \n",
     "        if '|' in stars[j]:\n",
     "            dir_index = j\n",
     "    \n",
     "    stars = stars[dir_index + 1:]\n",
-    "\n",
     "    return stars if stars != [] else None\n",
     "\n",
     "def format_genres(genre):\n",
@@ -77,9 +75,386 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 52,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Peter O'Toole\n",
+      "Manti Te'o\n",
+      "Dylan O'Brien\n",
+      "Cristiana Dell'Anna\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Jermaine O'Neal\n",
+      "Junming 'Jimmy' Wang\n",
+      "\n",
+      "\n",
+      "\n",
+      "Benjamin O'Keefe\n",
+      "Auli'i Cravalho\n",
+      "Jun'ichi Suwabe\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Nigel O'Neill\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Lucas 'Koka' Penteado\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Cam'ron\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Maureen O'Hara\n",
+      "\n",
+      "\n",
+      "Tatum O'Neal\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Anya O'Connor\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Chris D'Elia\n",
+      "\n",
+      "\n",
+      "Matt O'Leary\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Emilio D'Alessandro\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Tybie O'Bard\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Chris D'Elia\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Chris D'Elia\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Rodrigo Sant'anna\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Soledad O'Brien\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "df = get_cleaned_dataframe()\n",
     "\n",
@@ -119,24 +494,24 @@
     "media_top = get_top_media(media, 500)\n",
     "media_actors = get_unique_actors(media_top)\n",
     "\n",
-    "all_actors = get_unique_actors(df)"
+    "all_actors = get_unique_actors(df)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████| 3447/3447 [00:00<00:00, 28672.90it/s]\n",
-      "100%|███████████████████████████████████████| 3447/3447 [01:24<00:00, 40.97it/s]\n",
-      "100%|███████████████████████████████████| 2508/2508 [00:00<00:00, 131688.96it/s]\n",
-      "100%|███████████████████████████████████████| 2508/2508 [00:40<00:00, 62.40it/s]\n",
-      "100%|███████████████████████████████████| 5955/5955 [00:00<00:00, 187765.13it/s]\n",
-      "100%|███████████████████████████████████████| 5955/5955 [03:47<00:00, 26.20it/s]\n"
+      "100%|███████████████████████████████████████| 100/100 [00:00<00:00, 3512.46it/s]\n",
+      "100%|███████████████████████████████████████| 100/100 [00:00<00:00, 1305.07it/s]\n",
+      "100%|████████████████████████████████████████| 50/50 [00:00<00:00, 30808.76it/s]\n",
+      "100%|█████████████████████████████████████████| 50/50 [00:00<00:00, 2890.15it/s]\n",
+      "100%|████████████████████████████████████████| 50/50 [00:00<00:00, 78486.23it/s]\n",
+      "100%|█████████████████████████████████████████| 50/50 [00:00<00:00, 2790.81it/s]\n"
      ]
     }
    ],
@@ -146,12 +521,25 @@
     "from tqdm import tqdm\n",
     "from pyvis.network import Network\n",
     "\n",
+    "colors = {000: \"#FF8AA7\",\n",
+    "    196: \"#FFBB8A\",\n",
+    "    197: \"#F5FF8A\",\n",
+    "    198: \"#ACFF8A\",\n",
+    "    199: \"#8AF0FF\",\n",
+    "    200: \"#8A99FF\",\n",
+    "    201: \"#D18AFF\",\n",
+    "    202: \"#FF8ADF\"}\n",
+    "\n",
     "# Network Visualization of Media with shared actors\n",
     "def create_media_network(df, network, num_nodes):\n",
-    "\n",
+    "   \n",
     "    # Creating Nodes\n",
     "    for i in tqdm(range(num_nodes)):\n",
-    "        network.add_node(df.loc[i,'title'])\n",
+    "        year = df.loc[i, 'year']\n",
+    "        year = int(str(year)[:3])\n",
+    "        if year not in colors:\n",
+    "            year=000\n",
+    "        network.add_node(df.loc[i,'title'], color=colors[year])\n",
     "\n",
     "    # Creating Edges\n",
     "    for i in tqdm(range(num_nodes)):\n",
@@ -164,7 +552,7 @@
     "                    else:\n",
     "                        w += 5\n",
     "            if w > 0:\n",
-    "                network.add_edge(df.loc[i, 'title'], df.loc[j, 'title'], weight=w,)\n",
+    "                network.add_edge(df.loc[i, 'title'], df.loc[j, 'title'], weight=w, color='black')\n",
     "    return network\n",
     "\n",
     "# Creating the networks\n",
@@ -172,9 +560,9 @@
     "tv_show_network = nx.MultiGraph()\n",
     "combine_network = nx.MultiGraph()\n",
     "\n",
-    "movie_network = create_media_network(movies, movie_network, len(movies))\n",
-    "tv_show_network = create_media_network(tv_shows, tv_show_network, len(tv_shows))\n",
-    "combine_network = create_media_network(media, combine_network, len(media))\n",
+    "movie_network = create_media_network(movies, movie_network, 100)\n",
+    "tv_show_network = create_media_network(tv_shows, tv_show_network, 50)\n",
+    "combine_network = create_media_network(media, combine_network, 50)\n",
     "\n",
     "# Scaling the nodes based on their degree\n",
     "scale=4\n",
@@ -210,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
