--- a/movie-analysis.ipynb
+++ b/movie-analysis.ipynb
@@ -119,7 +119,13 @@
     "media_top = get_top_media(media, 500)\n",
     "media_actors = get_unique_actors(media_top)\n",
     "\n",
-    "all_actors = get_unique_actors(df)"
+    "all_actors = get_unique_actors(df)\n",
+    "\n",
+    "all_genres = []\n",
+    "for _, row in df.iterrows():\n",
+    "    for genre in row['genre']:\n",
+    "        if genre not in all_genres:\n",
+    "            all_genres.append(genre)"
    ]
   },
   {
@@ -241,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_genre_v_rating(df, title):\n",
+    "def get_genre_v_rating(df):\n",
     "    genre_ratings_dict = {}\n",
     "\n",
     "    for _, row in df.iterrows():\n",
@@ -259,21 +265,46 @@
     "        genre_df.loc[genre, 'std'] = np.std(ratings)\n",
     "        genre_df.loc[genre, 'count'] = len(ratings)\n",
     "\n",
-    "\n",
-    "    plt.figure(figsize=(30, 10))\n",
-    "    plt.bar(x=genre_df.index, height=genre_df['mean'])\n",
-    "    plt.errorbar(range(len(genre_df)), genre_df['mean'], yerr=genre_df['std'], fmt='or')\n",
-    "    plt.xlim(-0.5,len(genre_df)-.5)\n",
-    "    plt.title(title)\n",
-    "    plt.xlabel('genre')\n",
-    "    plt.ylabel('rating')\n",
-    "    plt.show()\n",
-    "\n",
     "    return genre_df\n",
     "\n",
-    "combined_genre_df = plot_genre_v_rating(df, 'Combined')\n",
-    "tv_genre_df = plot_genre_v_rating(df.drop(df.loc[df['is_tv'] != True].index), 'TV Shows')\n",
-    "movie_genre_df = plot_genre_v_rating(df.drop(df.loc[df['is_tv'] != False].index), 'Movies')"
+    "def get_genres_per_actor(df):\n",
+    "    actor_df = pd.DataFrame(index=get_unique_actors(df), columns=all_genres)\n",
+    "\n",
+    "    actor_df = actor_df.infer_objects(copy=False).fillna(0)\n",
+    "\n",
+    "    for _, row in df.iterrows():\n",
+    "        for actor in row['stars']:\n",
+    "            if actor in row['stars']:\n",
+    "                for genre in row['genre']:\n",
+    "                    actor_df.loc[actor, genre] += 1;\n",
+    "\n",
+    "    media_per_actor_by_genre_df = pd.DataFrame()\n",
+    "\n",
+    "    for genre in actor_df.columns:\n",
+    "        counts = [count for count in actor_df[genre] if count != 0] \n",
+    "        if counts != []:\n",
+    "            media_per_actor_by_genre_df.loc[genre, 'mean'] = np.mean(counts) \n",
+    "            media_per_actor_by_genre_df.loc[genre, 'std'] = np.std(counts)\n",
+    "            media_per_actor_by_genre_df.loc[genre, 'count'] = len(counts)\n",
+    "    \n",
+    "    return media_per_actor_by_genre_df\n",
+    "\n",
+    "\n",
+    "def plot_mean_std(df, title, xlabel, ylabel, ylim=0):\n",
+    "    df = df.drop(df.loc[df['count'] == 0].index)\n",
+    "\n",
+    "    df = df.sort_index(axis=0)\n",
+    "\n",
+    "    plt.figure(figsize=(30, 10))\n",
+    "    plt.bar(x=df.index, height=df['mean'])\n",
+    "    plt.errorbar(range(len(df)), df['mean'], yerr=df['std'], fmt='or')\n",
+    "    plt.xlim(-.5,len(df)-.5)\n",
+    "    if (ylim != 0):\n",
+    "        plt.ylim(0, ylim)\n",
+    "    plt.xlabel(xlabel)\n",
+    "    plt.ylabel(ylabel)\n",
+    "    plt.title(title)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -282,21 +313,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "actor_df = pd.DataFrame(index=all_actors, columns=combined_genre_df.index)\n",
+    "combined_genre_df = get_genre_v_rating(df)\n",
+    "tv_genre_df = get_genre_v_rating(df.drop(df.loc[df['is_tv'] != True].index))\n",
+    "movie_genre_df = get_genre_v_rating(df.drop(df.loc[df['is_tv'] != False].index))\n",
     "\n",
-    "actor_df = actor_df.fillna(0)\n",
+    "plot_mean_std(combined_genre_df, 'Combined', 'Genre', 'Rating', 10)\n",
+    "plot_mean_std(tv_genre_df, 'TV', 'Genre', 'Rating', 10)\n",
+    "plot_mean_std(movie_genre_df, 'Movies', 'Genre', 'Rating', 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "media_per_actor_by_genre_df = get_genres_per_actor(df)\n",
+    "tv_shows_per_actor_by_genre_df = get_genres_per_actor(df.drop(df.loc[df['is_tv'] != True].index))\n",
+    "movies_per_actor_by_genre_df = get_genres_per_actor(df.drop(df.loc[df['is_tv'] != False].index))\n",
     "\n",
-    "for _, row in tqdm(df.iterrows()):\n",
-    "    for actor in row['stars']:\n",
-    "        if actor in row['stars']:\n",
-    "            for genre in row['genre']:\n",
-    "                actor_df.loc[actor, genre] += 1;\n",
-    "\n",
-    "for genre in actor_df.columns:\n",
-    "    counts = [count for count in actor_df[genre] if count != 0] \n",
-    "    print(f'Mean of {genre.lower()} movies for actors with at least 1: {np.mean(counts)}')\n",
-    "    print(f'Std dev of {genre.lower()} movies for actors with at least 1: {np.std(counts)}\\n')\n",
-    "    "
+    "plot_mean_std(media_per_actor_by_genre_df, 'Combined', 'Genre', 'Media per actor', 3.5)\n",
+    "plot_mean_std(tv_shows_per_actor_by_genre_df, 'TV Shows', 'Genre', 'Media per actor', 3.5)\n",
+    "plot_mean_std(movies_per_actor_by_genre_df, 'Movies', 'Genre', 'Media per actor', 3.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1930, 2030, 10):\n",
+    "    decade_df = df.drop(df.loc[df['year'] < i].index) \n",
+    "    decade_df = decade_df.drop(df.loc[df['year'] >= i+10].index) \n",
+    "    media_per_actor_by_genre_by_decade_df = get_genres_per_actor(decade_df) \n",
+    "    plot_mean_std(media_per_actor_by_genre_by_decade_df, f'{i}\\'s', 'Genre', 'Media per actor', 3.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1930, 2030, 10):\n",
+    "    decade_df = df.drop(df.loc[df['year'] < i].index) \n",
+    "    decade_df = decade_df.drop(df.loc[df['year'] >= i+10].index) \n",
+    "    genre_v_rating_by_decade_df = get_genre_v_rating(decade_df) \n",
+    "    plot_mean_std(genre_v_rating_by_decade_df, f'{i}\\'s', 'Genre', 'Rating', 10)"
    ]
   },
   {
