added pics and some code

--- a/movie-analysis.ipynb
+++ b/movie-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,386 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Peter O'Toole\n",
-      "Manti Te'o\n",
-      "Dylan O'Brien\n",
-      "Cristiana Dell'Anna\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Jermaine O'Neal\n",
-      "Junming 'Jimmy' Wang\n",
-      "\n",
-      "\n",
-      "\n",
-      "Benjamin O'Keefe\n",
-      "Auli'i Cravalho\n",
-      "Jun'ichi Suwabe\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Nigel O'Neill\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Lucas 'Koka' Penteado\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Cam'ron\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Maureen O'Hara\n",
-      "\n",
-      "\n",
-      "Tatum O'Neal\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Anya O'Connor\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Chris D'Elia\n",
-      "\n",
-      "\n",
-      "Matt O'Leary\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Emilio D'Alessandro\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Tybie O'Bard\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Chris D'Elia\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Chris D'Elia\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Rodrigo Sant'anna\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Soledad O'Brien\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = get_cleaned_dataframe()\n",
     "\n",
@@ -499,22 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████| 100/100 [00:00<00:00, 3512.46it/s]\n",
-      "100%|███████████████████████████████████████| 100/100 [00:00<00:00, 1305.07it/s]\n",
-      "100%|████████████████████████████████████████| 50/50 [00:00<00:00, 30808.76it/s]\n",
-      "100%|█████████████████████████████████████████| 50/50 [00:00<00:00, 2890.15it/s]\n",
-      "100%|████████████████████████████████████████| 50/50 [00:00<00:00, 78486.23it/s]\n",
-      "100%|█████████████████████████████████████████| 50/50 [00:00<00:00, 2790.81it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
@@ -550,9 +162,9 @@
     "                    if w == 0:\n",
     "                        w += 2\n",
     "                    else:\n",
-    "                        w += 5\n",
+    "                        w += 10\n",
     "            if w > 0:\n",
-    "                network.add_edge(df.loc[i, 'title'], df.loc[j, 'title'], weight=w, color='black')\n",
+    "                network.add_edge(df.loc[i, 'title'], df.loc[j, 'title'], weight=w, color='#868686')\n",
     "    return network\n",
     "\n",
     "# Creating the networks\n",
@@ -560,12 +172,12 @@
     "tv_show_network = nx.MultiGraph()\n",
     "combine_network = nx.MultiGraph()\n",
     "\n",
-    "movie_network = create_media_network(movies, movie_network, 100)\n",
-    "tv_show_network = create_media_network(tv_shows, tv_show_network, 50)\n",
-    "combine_network = create_media_network(media, combine_network, 50)\n",
+    "movie_network = create_media_network(movies, movie_network, len(movies))\n",
+    "tv_show_network = create_media_network(tv_shows, tv_show_network, len(tv_shows))\n",
+    "combine_network = create_media_network(media, combine_network, len(media))\n",
     "\n",
     "# Scaling the nodes based on their degree\n",
-    "scale=4\n",
+    "scale=10\n",
     "d_movie = dict(movie_network.degree)\n",
     "d_movie.update((x, scale*y) for x, y in d_movie.items())\n",
     "d_tv_show = dict(tv_show_network.degree)\n",
@@ -598,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +234,7 @@
     "                            w += 2\n",
     "                            network.remove_edge(actors[i], actor_2)\n",
     "                            \n",
-    "                        network.add_edge(actors[i], actor_2, weight=w)\n",
+    "                        network.add_edge(actors[i], actor_2, weight=w, color='#868686')\n",
     "    return network\n",
     "\n",
     "movie_actor_network = nx.MultiGraph()\n",
@@ -635,7 +247,7 @@
     "media_actor_network = create_actor_network(media_actors, media, media_actor_network, len(media_actors))\n",
     "\n",
     "# Scaling the nodes based on their degree\n",
-    "scale=4\n",
+    "scale=15\n",
     "d_movie_actor = dict(movie_actor_network.degree)\n",
     "d_movie_actor.update((x, scale*y) for x, y in d_movie_actor.items())\n",
     "\n",
