--- a/movie-analysis.ipynb
+++ b/movie-analysis.ipynb
@@ -116,15 +116,12 @@
     "media = df.dropna().reset_index(drop=True)\n",
     "\n",
     "\n",
-    "# Creating lists of the actors found in the top 500 movies/tv shows/combined media\n",
-    "tv_top = get_top_media(tv_shows, 500)\n",
-    "tv_actors = get_unique_actors(tv_top)\n",
+    "# Creating lists of the actors found in the media\n",
+    "tv_actors = get_unique_actors(tv_shows)\n",
     "\n",
-    "movie_top = get_top_media(movies, 500)\n",
-    "movie_actors = get_unique_actors(movie_top)\n",
+    "movie_actors = get_unique_actors(movies)\n",
     "\n",
-    "media_top = get_top_media(media, 500)\n",
-    "media_actors = get_unique_actors(media_top)\n",
+    "media_actors = get_unique_actors(media)\n",
     "\n",
     "all_actors = get_unique_actors(df)\n",
     "\n",
@@ -170,12 +167,13 @@
     "    for i in tqdm(range(num_nodes)):\n",
     "        for j in range(i + 1, num_nodes):\n",
     "            w = 0\n",
-    "            for actor in df.loc[i, 'stars']:\n",
-    "                if actor in df.loc[j, 'stars']:\n",
-    "                    if w == 0:\n",
-    "                        w += 2\n",
-    "                    else:\n",
-    "                        w += 10\n",
+    "            if (df.loc[i, 'stars'] != []):\n",
+    "                for actor in df.loc[i, 'stars']:\n",
+    "                    if actor in df.loc[j, 'stars']:\n",
+    "                        if w == 0:\n",
+    "                            w += 2\n",
+    "                        else:\n",
+    "                            w += 10\n",
     "            if w > 0:\n",
     "                network.add_edge(df.loc[i, 'title'], df.loc[j, 'title'], weight=w, color='#868686')\n",
     "    return network\n",
@@ -218,7 +216,29 @@
     "\n",
     "nt_movie.show(\"nx_movie.html\")\n",
     "nt_tv_show.show(\"nx_tv_show.html\")\n",
-    "nt_combine.show(\"nx_combine.html\")"
+    "nt_combine.show(\"nx_combine.html\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Getting data from specific nodes we find interesting\n",
+    "# Movies\n",
+    "# Johan Falk\n",
+    "print(movie_network.degree['Johan Falk: Barninfiltratören'])\n",
+    "print(movie_network.degree['Johan Falk: Ur askan i elden'])\n",
+    "print(movie_network.degree['Johan Falk: National Target'])\n",
+    "print(movie_network.degree['Johan Falk: Slutet'])\n",
+    "print(movie_network.degree['Johan Falk: Lockdown'])\n",
+    "print(movie_network.degree['Labrador'])\n",
+    "# Jumanji\n",
+    "print(movie_network.degree['Jumanji: Welcome to the Jungle'])\n",
+    "# TV Shows \n",
+    "# Children of the Whales\n",
+    "# Kuromukuro"
    ]
   },
   {
@@ -290,7 +310,25 @@
     "nt_media_actor = Network(\"1000px\", \"1000px\")\n",
     "nt_media_actor.from_nx(media_actor_network)\n",
     "nt_media_actor.show_buttons(filter_='physics')\n",
-    "nt_media_actor.show(\"nx_media_actor.html\")"
+    "nt_media_actor.show(\"nx_media_actor.html\")\n",
+    "\n",
+    "# Getting info about nodes we find interesting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Getting info about nodes we find interesting\n",
+    "# Ashleigh Ball\n",
+    "# Cherami Leigh\n",
+    "# Dee Bradley Baker\n",
+    "# Johnny Yong Bosch\n",
+    "# Teresa Gallagher\n",
+    "# Todd Haberkorn\n",
+    "# Will Arnet"
    ]
   },
   {
