--- a/movie-analysis.ipynb
+++ b/movie-analysis.ipynb
@@ -143,14 +143,14 @@
     "from tqdm import tqdm\n",
     "from pyvis.network import Network\n",
     "\n",
-    "colors = {000: \"#FF8AA7\",\n",
-    "    196: \"#FFBB8A\",\n",
-    "    197: \"#F5FF8A\",\n",
-    "    198: \"#ACFF8A\",\n",
-    "    199: \"#8AF0FF\",\n",
-    "    200: \"#8A99FF\",\n",
-    "    201: \"#D18AFF\",\n",
-    "    202: \"#FF8ADF\"}\n",
+    "colors = {000: \"#FF8AA7\", # red-pink\n",
+    "    196: \"#FFBB8A\", # orange\n",
+    "    197: \"#F5FF8A\", # yellow\n",
+    "    198: \"#ACFF8A\", # green\n",
+    "    199: \"#8AF0FF\", # aqua\n",
+    "    200: \"#8A99FF\", # blue\n",
+    "    201: \"#D18AFF\", # purple\n",
+    "    202: \"#FF8ADF\"} # pink\n",
     "\n",
     "# Network Visualization of Media with shared actors\n",
     "def create_media_network(df, network, num_nodes):\n",
