--- a/movie-analysis.ipynb
+++ b/movie-analysis.ipynb
@@ -8,7 +8,11 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tqdm import tqdm\n",
+    "from pyvis.network import Network"
    ]
   },
   {
@@ -17,8 +21,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def format_stars(stars):\n",
+    "# Various functions for cleaning data\n",
     "\n",
+    "def format_stars(stars):\n",
     "    stars = stars.split(', \\'')\n",
     "    stars = [star for star in stars if star != '' and ':\\'' not in star]\n",
     "    stars[0] = stars[0][2:]\n",
@@ -39,14 +44,17 @@
     "\n",
     "    return stars if stars != [] else None\n",
     "\n",
+    "\n",
     "def format_genres(genre):\n",
     "    genres = genre.split(', ')\n",
     "    return genres if genres != [] else None\n",
+    "\n",
     "\n",
     "def format_years(year):\n",
     "    if len(year) < 5 or year[1] not in ['1', '2']:\n",
     "        return None\n",
     "    return int(year[1:5])\n",
+    "\n",
     "\n",
     "def format_votes(votes):\n",
     "    if (type(votes) == str):\n",
@@ -54,12 +62,14 @@
     "        votes = float(votes)\n",
     "    return votes\n",
     "\n",
+    "\n",
     "def set_is_tv(duration):\n",
     "    duration = int(duration[0: -4])\n",
     "\n",
     "    if duration < 70:\n",
     "        return True\n",
     "    return False\n",
+    "\n",
     "\n",
     "def get_cleaned_dataframe():\n",
     "    df = pd.read_csv('./n_movies.csv')\n",
@@ -76,8 +86,7 @@
     "    df = df.dropna()\n",
     "    df = df.reset_index()\n",
     "    \n",
-    "    return df\n",
-    "\n"
+    "    return df"
    ]
   },
   {
@@ -88,7 +97,10 @@
    },
    "outputs": [],
    "source": [
+    "# Set up base dataframes for analysis\n",
+    "\n",
     "df = get_cleaned_dataframe()\n",
+    "\n",
     "\n",
     "def get_top_media(df, n):\n",
     "    # Creating dataframes of the top 500 rows sorted by number of votes\n",
@@ -99,6 +111,7 @@
     "            if star not in top_actors:\n",
     "                top_actors.append(star)\n",
     "    return top_media\n",
+    "\n",
     "\n",
     "def get_unique_actors(df):\n",
     "    actors = []\n",
@@ -138,11 +151,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import networkx as nx\n",
-    "import matplotlib.pyplot as plt\n",
-    "from tqdm import tqdm\n",
-    "from pyvis.network import Network\n",
-    "\n",
     "colors = {000: \"#FF8AA7\", # red-pink\n",
     "    196: \"#FFBB8A\", # orange\n",
     "    197: \"#F5FF8A\", # yellow\n",
@@ -175,7 +183,8 @@
     "                        else:\n",
     "                            w += 10\n",
     "            if w > 0:\n",
-    "                network.add_edge(df.loc[i, 'title'], df.loc[j, 'title'], weight=w, color='#868686')\n",
+    "                network.add_edge(df.loc[i, 'title'], df.loc[j, 'title'], \n",
+    "                                 weight=w, color='#868686')\n",
     "    return network\n",
     "\n",
     "# Creating the networks\n",
@@ -225,19 +234,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "movie_degree_sequence = sorted(([n, d] for n, d in movie_network.degree()), key=lambda item:item[1], reverse=True)\n",
+    "# Degree rank plot and degree histogram for media\n",
+    "\n",
+    "movie_degree_sequence = sorted(([n, d] for n, d in movie_network.degree()), \n",
+    "                               key=lambda item:item[1], reverse=True)\n",
     "print(movie_degree_sequence[:10])\n",
     "movie_degree_sequence = [i[1] for i in movie_degree_sequence]\n",
     "\n",
-    "tv_show_degree_sequence = sorted(([n, d] for n, d in tv_show_network.degree()), key=lambda item:item[1], reverse=True)\n",
+    "tv_show_degree_sequence = sorted(([n, d] for n, d in tv_show_network.degree()), \n",
+    "                                 key=lambda item:item[1], reverse=True)\n",
     "print(tv_show_degree_sequence[:10])\n",
     "tv_show_degree_sequence = [i[1] for i in tv_show_degree_sequence]\n",
     "\n",
-    "combined_degree_sequence = sorted(([n, d] for n, d in combine_network.degree()), key=lambda item:item[1], reverse=True)\n",
+    "combined_degree_sequence = sorted(([n, d] for n, d in combine_network.degree()), \n",
+    "                                  key=lambda item:item[1], reverse=True)\n",
     "print(combined_degree_sequence[:10])\n",
     "combined_degree_sequence = [i[1] for i in combined_degree_sequence]\n",
-    "\n",
-    "\n",
     "\n",
     "fig, ax = plt.subplots(ncols=2)\n",
     "\n",
@@ -313,13 +325,16 @@
     "    return network\n",
     "\n",
     "movie_actor_network = nx.MultiGraph()\n",
-    "movie_actor_network = create_actor_network(movie_actors, movies, movie_actor_network, len(movie_actors))\n",
+    "movie_actor_network = create_actor_network(movie_actors, movies, movie_actor_network, \n",
+    "                                           len(movie_actors))\n",
     "\n",
     "tv_actor_network = nx.MultiGraph()\n",
-    "tv_actor_network = create_actor_network(tv_actors, tv_shows, tv_actor_network, len(tv_actors))\n",
+    "tv_actor_network = create_actor_network(tv_actors, tv_shows, tv_actor_network, \n",
+    "                                        len(tv_actors))\n",
     "\n",
     "media_actor_network = nx.MultiGraph()\n",
-    "media_actor_network = create_actor_network(media_actors, media, media_actor_network, len(media_actors))\n",
+    "media_actor_network = create_actor_network(media_actors, media, media_actor_network, \n",
+    "                                           len(media_actors))\n",
     "\n",
     "# Scaling the nodes based on their degree\n",
     "scale=15\n",
@@ -363,15 +378,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "movie_actor_degree_sequence = sorted(([n, d] for n, d in movie_actor_network.degree()), key=lambda item:item[1], reverse=True)\n",
+    "# Degree rank plot and degree histogram for actors\n",
+    "\n",
+    "movie_actor_degree_sequence = sorted(([n, d] for n, d in movie_actor_network.degree()), \n",
+    "                                     key=lambda item:item[1], reverse=True)\n",
     "print(movie_actor_degree_sequence[:10])\n",
     "movie_actor_degree_sequence = [i[1] for i in movie_actor_degree_sequence]\n",
     "\n",
-    "tv_actor_degree_sequence = sorted(([n, d] for n, d in tv_actor_network.degree()), key=lambda item:item[1], reverse=True)\n",
+    "tv_actor_degree_sequence = sorted(([n, d] for n, d in tv_actor_network.degree()), \n",
+    "                                  key=lambda item:item[1], reverse=True)\n",
     "print(tv_actor_degree_sequence[:10])\n",
     "tv_actor_degree_sequence = [i[1] for i in tv_actor_degree_sequence]\n",
     "\n",
-    "combined_actor_degree_sequence = sorted(([n, d] for n, d in media_actor_network.degree()), key=lambda item:item[1], reverse=True)\n",
+    "combined_actor_degree_sequence = sorted(([n, d] for n, d in media_actor_network.degree()), \n",
+    "                                        key=lambda item:item[1], reverse=True)\n",
     "print(combined_actor_degree_sequence[:10])\n",
     "combined_actor_degree_sequence = [i[1] for i in combined_actor_degree_sequence]\n",
     "\n",
@@ -426,6 +446,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Helper functions for assembling and graphing data\n",
+    "\n",
     "def get_genre_v_rating(df):\n",
     "    genre_ratings_dict = {}\n",
     "\n",
@@ -445,6 +467,7 @@
     "        genre_df.loc[genre, 'count'] = len(ratings)\n",
     "\n",
     "    return genre_df\n",
+    "\n",
     "\n",
     "def get_genres_per_actor(df):\n",
     "    actor_df = pd.DataFrame(index=get_unique_actors(df), columns=all_genres)\n",
@@ -467,6 +490,7 @@
     "    \n",
     "    return media_per_actor_by_genre_df\n",
     "\n",
+    "\n",
     "def get_actor_ratings(df):\n",
     "    actor_ratings_dict = {}\n",
     "\n",
@@ -485,7 +509,6 @@
     "\n",
     "    return actor_ratings_df\n",
     "            \n",
-    "\n",
     "\n",
     "def plot_mean_std(df, title, xlabel, ylabel, ylim=0):\n",
     "    df = df.drop(df.loc[df['count'] == 0].index)\n",
@@ -510,6 +533,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot average genre per rating\n",
+    "\n",
     "combined_genre_df = get_genre_v_rating(df)\n",
     "tv_genre_df = get_genre_v_rating(df.drop(df.loc[df['is_tv'] != True].index))\n",
     "movie_genre_df = get_genre_v_rating(df.drop(df.loc[df['is_tv'] != False].index))\n",
@@ -525,6 +550,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot media per actor by genre\n",
+    "\n",
     "media_per_actor_by_genre_df = get_genres_per_actor(df)\n",
     "tv_shows_per_actor_by_genre_df = get_genres_per_actor(df.drop(df.loc[df['is_tv'] != True].index))\n",
     "movies_per_actor_by_genre_df = get_genres_per_actor(df.drop(df.loc[df['is_tv'] != False].index))\n",
@@ -540,17 +567,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "19_df = df.drop(df.loc[df['year'] < 2000].index) \n",
-    "1900s_media_per_actor_by_genre_df = get_genres_per_actor(1900s_df)\n",
-    "plot_mean_std(1900s_media_per_actor_by_genre_df, f'{i}\\'s', 'Genre', 'Media per actor', 3.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Plot average rating over decades\n",
+    "\n",
     "for i in range(1930, 2030, 10):\n",
     "    decade_df = df.drop(df.loc[df['year'] < i].index) \n",
     "    decade_df = decade_df.drop(df.loc[df['year'] >= i+10].index) \n",
@@ -564,6 +582,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot actor ratings vs. actor credits\n",
+    "\n",
     "actor_ratings_df = get_actor_ratings(df).sort_values('count', ascending=False)\n",
     "\n",
     "count_ratings_dict = {}\n",
@@ -589,13 +609,6 @@
     "plt.xticks(np.arange(0, 20, step=1))\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
